--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,5 @@
 {
     "name": "xenyo/uni_module_template",
     "description": "Drupal module template for Xenyo Uni Framework.",
-    "type": "drupal-custom-module",
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "https://packages.xenyo.net"
-        },
-        {
-            "type": "composer",
-            "url": "https://packages.drupal.org/8"
-        }
-    ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "require": {
-    },
-    "config": {
-        "sort-packages": true
-    }
+    "type": "drupal-custom-module"
 }
