Add components namespace

--- a/uni_module_template.info.yml
+++ b/uni_module_template.info.yml
@@ -5,3 +5,6 @@ hidden: true
 package: Xenyo
 core_version_requirement: ^9 || ^10
 asset_autoload: true
+components:
+  namespaces:
+    components: components
